# docforge

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  SKILL.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/__tests__/: ai-provider.test.ts  chunker.test.ts  deep-research.test.ts  document-builder.test.ts  docx-parser.test.ts  embedder.test.ts  gap-detector.test.ts  matcher.test.ts  pdf-parser.test.ts  pipeline.test.ts  retriever.test.ts  stores.test.ts  structure.test.ts  template-extractor.test.ts  template.test.ts  text-to-tree.test.ts  vector-store.test.ts  web-search.test.ts
src/app/routes/generate/: index.tsx
src/app/routes/home/: index.tsx
src/app/routes/preview/: index.tsx
src/app/routes/project/: index.tsx
src/app/routes/settings/: index.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  empty-state.tsx  input.tsx  progress.tsx  select.tsx  tabs.tsx
src/lib/ai/: provider.ts
src/lib/document/: builder.ts  styles.ts
src/lib/knowledge/: matcher.ts
src/lib/pipeline/: analyzer.ts  gap-detector.ts  generator.ts  refiner.ts
src/lib/store/: generation.ts  project.ts  settings.ts
src/lib/template/: extractor.ts  registry.ts
templates/: bid-response.json  project-description.json  proposal.json  service-plan.json  solution.json
(+11 files in other folders)
